welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:1: error: value in is not a member of String
while (litMessage() in ("A","B","L","Z","I","X")){
                    ^