welcome.lessons.welcome.bdr.BDR.scala.code
while (litMessage() in ("A","B","L","Z","I","X")){
  avance()
}